# lua-mumble

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  acl.h  audio.c  audio.h  banentry.c  channel.c  channel.h  client.c  client.h  encoder.c  encoder.h  list.c  mumble.c  mumble.h  packet.c  stb_vorbis.c  target.c  target.h  timer.c  timer.h  user.c  user.h  util.c  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
examples/: afk.lua  hooks.lua  playlist.lua  timer.lua
mumble/: acl.h  audio.c  audio.h  audiostream.c  audiostream.h  banentry.c  banentry.h  buffer.c  buffer.h  channel.c  channel.h  client.c  client.h  crypt.c  crypt.h  decoder.c  decoder.h  defines.h  encoder.c  encoder.h  log.c  log.h  mumble.c  mumble.h  ocb.c  ocb.h  packet.c  packet.h  pipe.c  pipe.h  plugindata.c  plugindata.h  target.c  target.h  thread.c  thread.h  timer.c  timer.h  types.h  user.c  (+3 more)
proto/: Mumble.proto
tests/: crypt.lua
